--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             Diagram berikut menunjukkan jumlah pengangguran di Indonesia berdasarkan kelompok usia pada Februari 2025. Grafik ini memperlihatkan bahwa kelompok usia 15–24 tahun memiliki jumlah pengangguran paling tinggi dibandingkan kelompok usia lainnya, kemudian diikuti oleh kelompok usia 25–34 tahun. Seiring bertambahnya usia, jumlah pengangguran cenderung menurun, meskipun terdapat kenaikan pada kelompok usia tertentu.
         </p>
         <figure style="text-align:center; margin:30px 0;">
-            <img src="Foto.jpeg" alt="Diagram Jumlah Pengangguran Indonesia Februari 2025" style="max-width:100%; border-radius:12px; box-shadow:0 10px 25px rgba(0,0,0,0.15);" />
+            <img src="grafik.jpeg" alt="Diagram Jumlah Pengangguran Indonesia Februari 2025" style="max-width:100%; border-radius:12px; box-shadow:0 10px 25px rgba(0,0,0,0.15);" />
             <figcaption style="margin-top:12px; font-size:0.9rem; color:#555;">
                 Diagram Jumlah Pengangguran Indonesia per Februari 2025 (Sumber: BPS)
             </figcaption>
